# FCPCodebase

./: README.md  Run_Full_Team.py  Run_One_vs_One.py  Run_Player.py  Run_Utils.py  start.sh  start_fat_proxy.sh  start_penalty.sh
agent/: Agent.py  Agent_Penalty.py  Base_Agent.py
behaviors/: Behavior.py  Head.py  Poses.py  Slot_Engine.py  behavior_core.py
bundle/: bundle.sh
communication/: Radio.py  World_Parser.py  server.py  world_parser.py
cpp/: CMakeLists.txt
cpp/a_star/: CMakeLists.txt  Makefile  a_star.cpp  a_star.h
cpp/ball_predictor/: CMakeLists.txt  Makefile  ball_predictor.cpp
cpp/localization/: CMakeLists.txt  Field.cpp  Field.h  FieldNoise.cpp  FieldNoise.h  FieldNoise.hpp  Geometry.h  Line6.hpp  LocalizerV2.cpp  LocalizerV2.h  Makefile  Matrix4D.hpp  RobovizLogger.cpp  RobovizLogger.h  Singleton.h  Vector.hpp  Vector3.hpp  World.h  lib_main.cpp  robovizdraw.h
cpp/utils/: CMakeLists.txt  a_star.cpp  a_star.h  ball_predictor.cpp  ball_predictor.h  expansion_groups.py  lib_main.cpp
logs/: Logger.py
math_ops/: Inverse_Kinematics.py  Matrix_3x3.py  Matrix_4x4.py  Neural_Network.py  math_ext.py
scripts/: console_ui.py
scripts/commons/: Script.py  Server.py  Train_Base.py  UI.py
scripts/gyms/: Basic_Run.py  Fall.py  Get_Up.py  kick.py
scripts/utils/: Beam.py  Behaviors.py  Drawings.py  Dribble.py  Fwd_Kinematics.py  Get_Up.py  IMU.py  Inv_Kinematics.py  Joints.py  Kick.py  Localization.py  Pathfinding.py  Radio_Localization.py  Server.py  Team_Communication.py
world/: Draw.py  Other_Robot.py  Robot.py  World.py  robot_joint.py
(+28 files in other folders)
